models: removed unused models and regenerated swagger docs
