# metrics/controller.go
@@ -39,8 +39,8 @@ func (controller *controller) RegisterRoutes(router *gin.Engine) {
 // @Accept  json
 // @Produce  json
 // @Tags metrics
-// @Param   object      body   models.ObjectRequest     true  "object"
-// @Success 200 {object} models.ObjectIDResponse
+// Param   object      body   models.ObjectRequest     true  "object"
+// Success 200 {object} models.ObjectIDResponse
 // @Failure 400 {object} models.Error
 // @Failure 404 {object} models.Error
 // @Failure 500 {object} models.Error
@@ -56,8 +56,8 @@ func (controller *controller) CreateMixMetric(c *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Tags metrics
-// @Param   object      body   models.ObjectRequest     true  "object"
-// @Success 200 {object} models.ObjectIDResponse
+// Param   object      body   models.ObjectRequest     true  "object"
+// Success 200 {object} models.ObjectIDResponse
 // @Failure 400 {object} models.Error
 // @Failure 404 {object} models.Error
 // @Failure 500 {object} models.Error
