# models/models.go
@@ -5,16 +5,6 @@ type Error struct {
 	Error string `json:"error"`
 }
 
-// ObjectRequest contains a full json graph
-type ObjectRequest struct {
-	Object interface{} `json:"object"`
-}
-
-// ObjectIDResponse contains a full json graph
-type ObjectIDResponse struct {
-	ID string `json:"id"`
-}
-
 // HostInfo comes from a node telling us it's alive
 type HostInfo struct {
 	Host   string `json:"host" binding:"required"`
